# testrepo

./: password
dev/: atlantis.yaml
dev/glue/: s32sns.py
dev/glue/bnf/: raw2prepared.py
dev/glue/luminate/: exchange2prepared.py
dev/glue/onus/: onus_message_schema.json
dev/glue/productoffers/: raw2prepared.py
dev/lambda/: README.txt  buildlambda.sh  s3snsoperations.py
dev/lambda/config/: fis_raw_config.json
dev/lambda/omfeds_lambda_python/: fileencryptor.py  pgpfilenamedata.py  sftpremotefilenamedatafactory.py
dev/stepfunction/livevoxinput/: livevoxinput_step.json
omf-cc-infrastructure-dev/: .gitignore
omf-cc-infrastructure-dev/glue/fis/: raw2prepared.py
omf-cc-infrastructure-dev/glue/luminate/: luminate_config.json
omf-cc-infrastructure-dev/glue/powercurve/: raw2prepared.py
omf-cc-infrastructure-dev/lambda/config/: sql_queries.json
omf-cc-infrastructure-dev/lambda/omfeds_lambda_python/: pgpfilenamedatafactory.py  sftpuploader.py
omf-cc-infrastructure-main/batch/: launch_template.tftpl
omf-cc-infrastructure-main/glue/: README.txt
omf-cc-infrastructure-main/glue/bnf/: bnf_config.json  (+1 more)
omf-cc-infrastructure-main/lambda/: .gitignore  pyproject.toml  snowflake_operations.py
omf-cc-infrastructure-main/lambda/config/: fis_exchange_config.json  powercurve_exchange_config.json  productoffers_exchange_config.json
omf-cc-infrastructure-main/lambda/omfeds_lambda_python/: remotefilenamedata.py  reportutils.py  snowflakeconnector.py
omf-cc-infrastructure-main/lambda/omfeds_lambda_python/s3snsoperations/: s3snsoperations.py
(+176 files in other folders)
