[tool.poetry]
name = "omfeds_lambda_python"
version = "0.1.0"
description = ""
authors = ["Krzesimir Szarafinski <krzesimir.szarafinski.ce@omf.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
paramiko = "^2.7.2"
pendulum = {version = "^2.1.2", python = "~3.7"}
python-gnupg = {version = "^0.4.6", python = "~3.7"}
snowflake-connector-python = "2.5.0"
openpyxl = "3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

